tests/NormalTests/paczka1/small_fuzzy/76675390.err
Error in line 5: 7Rv7B A732 54,9
Error in line 3: YVeqb A732 32,6
